Finalizamos as etapas'-'

--- a/src/views/etapa7.mustache
+++ b/src/views/etapa7.mustache
@@ -1,9 +1,16 @@
 {{>partials/header}}
 
 <h2>Etapa 7: Resumo</h2>
-<div id="resumo">
-  <!-- O conteúdo será injetado dinamicamente pelo JavaScript -->
-</div>
+
+<div id="resumo2"> </div>
+
+<div id="resumo3"> </div>
+
+<div id="resumo4"> </div>
+
+<div id="resumo5"> </div>
+
+<div id="resumo6"> </div>
 
 <form action="/submit" method="POST">
   <button type="submit">Enviar</button>
