--- a/src/views/partials/footer.mustache
+++ b/src/views/partials/footer.mustache
@@ -6,6 +6,9 @@ Todos os direitos reservados
     <script src="public/js/etapa2.js"></script>
     <script src="public/js/etapa3.js"></script>
     <script src="public/js/etapa4.js"></script>
+    <script src="public/js/etapa5.js"></script>
+    <script src="public/js/etapa6.js"></script>
+    
 </footer>
 </body>
 </html>
