Tentando arrumar o ID'-'

--- a/src/views/partials/footer.mustache
+++ b/src/views/partials/footer.mustache
@@ -8,6 +8,7 @@ Todos os direitos reservados
     <script src="public/js/etapa4.js"></script>
     <script src="public/js/etapa5.js"></script>
     <script src="public/js/etapa6.js"></script>
+    <script src="public/js/pesquisar.js"></script>
     
 </footer>
 </body>
