--- a/src/views/etapa2.mustache
+++ b/src/views/etapa2.mustache
@@ -4,6 +4,8 @@
     <form action="/etapa2" method="POST">
         <h4>Dados Gerais</h4>
 
+        <p>Cliente ID: {{id_cliente}}</p>
+
         <div class="input-box">
             <label for="queixa_principal">Queixa principal:</label>
             <input type="text" id="queixa_principal" name="queixa_principal" required>
