--- a/src/views/etapa3.mustache
+++ b/src/views/etapa3.mustache
@@ -2,6 +2,8 @@
 
 <div class="form">
     <form action="/etapa3" method="POST">
+
+    <p>Cliente ID: {{id_cliente}}</p>
         <h4>Dados Clínicos</h4>
 
         <div class="input-group">
