--- a/src/views/etapa4.mustache
+++ b/src/views/etapa4.mustache
@@ -1,6 +1,7 @@
 {{>partials/header}}
 <div class="form">
     <form action="/etapa4" method="POST">
+    <p>Cliente ID: {{id_cliente}}</p>
         <h4>ALTERAÇÕES E LESÕES DOS PÉS</h4>
         <div class="row justify-content-center">
             <div class="formulario_boolean">
