--- a/src/views/etapa5.mustache
+++ b/src/views/etapa5.mustache
@@ -2,6 +2,7 @@
 
 <div class="form">
     <form action="/etapa5" method="POST">
+    <p>Cliente ID: {{id_cliente}}</p>
         <h4>Formato das Unhas</h4>
         <div class="row">
             <div class="col-md-3 text-center">
