--- a/src/views/etapa6.mustache
+++ b/src/views/etapa6.mustache
@@ -2,6 +2,7 @@ mustache {{>partials/header}}
  
 <div class="form">
     <form action="/etapa6" method="POST">
+    <p>Cliente ID: {{id_cliente}}</p>
         <h4>Alterações e Lesões</h4>
         <div class="row justify-content-center">
             <div class="col-md-4">
