--- a/src/views/etapa1.mustache
+++ b/src/views/etapa1.mustache
@@ -1,103 +1,96 @@
 {{>partials/header}}
 
-<p>
-    <b>Ficha de avaliação Podológica</b>
-</p>
-<div class="form">
-    <form action="/dadospessoais" method="POST">
-        
-            
-
-        
-    </form>
-
-<form action="/etapa1" method="POST">
-
-            <h4>Dados Pessoais</h4>
-            <div class="input-group">
-  
-                <div class="input-box">
-                <label for="nome">Nome:</label>
-                <input id="nome" type="text" name="nome" placeholder="Informe Seu nome" required>
-                </div>
-
-                <div class="input-box">
-                <label for="endereco">Endereço:</label>
-                <input id="endereco" type="text" name="endereco" placeholder="Endereço" required>
-                </div>
-
-                <div class="input-box">
-                <label for="bairro">Bairro:</label>
-                <input id="bairro" type="text" name="bairro" placeholder="Bairro" required>
-                </div>
-
-                <div class="input-box">
-                <label for="cidade">Cidade:</label>
-                <input id="cidade" type="text" name="cidade" placeholder="Cidade" required>
-                </div>
-
-                <div class="input-box">
-                <label for="estado">Estado:</label>
-                <input id="estado" type="text" name="estado" placeholder="Estado" required>
-                </div>
-
-                <div class="input-box">
-                <label for="cep">CEP:</label>
-                <input id="cep" type="text" name="cep" placeholder="xxxxx-xxx" required>
-                </div>
-
-                <div class="input-box">
-                <label for="tel_res">Tel. Res:</label>
-                <input id="tel_res" type="text" name="tel_res" placeholder="(xx)xxxx-xxxx" required>
-                </div>
-
-                <div class="input-box">
-                <label for="telefone">Tel:</label>
-                <input id="telefone" type="text" name="telefone" placeholder="(xx) xxxxx-xxxx" required>
-                </div>
-
-                <div class="input-box">
-                <label for="tel_emergencia">Tel. Emergência:</label>
-                <input id="tel_emergencia" type="text" name="tel_emergencia" placeholder="(xx) xxxxx-xxxx" required>
-                </div>
-
-                <div class="input-box">
-                <label for="contato">Contato:</label>
-                <input id="contato" type="text" name="contato" placeholder="Contato adicional" required>
-                </div>
-
-                <div class="input-box">
-                <label for="data_nascimento">Data Nasc.</label>
-                <input id="data_nascimento" type="date" name="data_nascimento" required>
-                </div>
-
-                <div class="input-box">
-                <label for="profissao">Profissão:</label>
-                <input id="profissao" type="text" name="profissao" placeholder="Sua profissão" required>
-                </div>
-
-                <div class="input-box">
-                <label for="email">Email:</label>
-                <input id="email" type="email" name="email" placeholder="seu@email.com" required>
-                </div>
+ <div class="container">
+        <div class="form-container">
+            <div class="form-header">
+                <h2 class="text-center text-white">Ficha de Avaliação Podológica</h2>
             </div>
 
-        <div class="gender-input">
-            <label>Sexo:</label>
-            <input type="radio" name="sexo" id="feminino" value="Feminino" required>
-            <label for="feminino">Feminino</label>
-        
-            <input type="radio" name="sexo" id="masculino" value="Masculino">
-            <label for="masculino">Masculino</label>
+            <form id="podologyForm" class="needs-validation" novalidate>
+                <div class="row mb-4">
+                    <div class="col-12 mb-3">
+                        <p class="h5 text-secondary">Cliente ID: <span class="text-dark">{{id_cliente}}</span></p>
+                    </div>
+                </div>
 
-            <input type="radio" name="sexo" id="outro" value="Outro">
-            <label for="outro">Outro</label>
-        </div>
-        </div>
+                <div class="row g-3">
+                    <div class="col-md-6">
+                        <label for="nome" class="form-label">Nome</label>
+                        <input type="text" class="form-control" id="nome" name="nome" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" name="email" required>
+                    </div>
+                    <div class="col-md-8">
+                        <label for="endereco" class="form-label">Endereço</label>
+                        <input type="text" class="form-control" id="endereco" name="endereco" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="bairro" class="form-label">Bairro</label>
+                        <input type="text" class="form-control" id="bairro" name="bairro" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="cidade" class="form-label">Cidade</label>
+                        <input type="text" class="form-control" id="cidade" name="cidade" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="estado" class="form-label">Estado</label>
+                        <input type="text" class="form-control" id="estado" name="estado" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="cep" class="form-label">CEP</label>
+                        <input type="text" class="form-control" id="cep" name="cep" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="tel_res" class="form-label">Telefone Residencial</label>
+                        <input type="tel" class="form-control" id="tel_res" name="tel_res" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="telefone" class="form-label">Celular</label>
+                        <input type="tel" class="form-control" id="telefone" name="telefone" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="tel_emergencia" class="form-label">Telefone Emergência</label>
+                        <input type="tel" class="form-control" id="tel_emergencia" name="tel_emergencia" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="data_nascimento" class="form-label">Data de Nascimento</label>
+                        <input type="date" class="form-control" id="data_nascimento" name="data_nascimento" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="profissao" class="form-label">Profissão</label>
+                        <input type="text" class="form-control" id="profissao" name="profissao" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="contato" class="form-label">Contato Adicional</label>
+                        <input type="text" class="form-control" id="contato" name="contato" required>
+                    </div>
+                </div>
 
-  <button onclick="nextStep()">Próximo</button>
-        <!-- Botão Voltar -->
-        
-</form>
+                <div class="gender-section mt-4">
+                    <label class="form-label d-block">Sexo</label>
+                    <div class="btn-group" role="group">
+                        <input type="radio" class="btn-check" name="sexo" id="feminino" value="Feminino" required>
+                        <label class="btn btn-outline-primary" for="feminino">Feminino</label>
+
+                        <input type="radio" class="btn-check" name="sexo" id="masculino" value="Masculino">
+                        <label class="btn btn-outline-primary" for="masculino">Masculino</label>
+
+                        <input type="radio" class="btn-check" name="sexo" id="outro" value="Outro">
+                        <label class="btn btn-outline-primary" for="outro">Outro</label>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-between btn-navigation">
+                    <button type="button" class="btn btn-secondary" onclick="previousStep()">Voltar</button>
+                    <button type="button" class="btn btn-primary" onclick="nextStep()">Próximo</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+
+
 
 {{>partials/footer}}
