--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -3,6 +3,7 @@
 <title>Página Home</title>
 <link rel="stylesheet" href="css/style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="public/css/test.css">
 </head>
  
 <body>
